# cmd/manager/server.go
@@ -63,13 +63,13 @@ func newRouter(
 	devH := handler.NewDeviceHandler(voicebots, devices)
 	providerH := handler.NewProviderHandler(providers)
 	modelH := handler.NewModelHandler(models)
-	voiceH := handler.NewVoiceHandler(voices, models)
+	voiceH := handler.NewVoiceHandler(voices, models, assetSvc)
 	langH := handler.NewLanguageHandler()
 	mcpH := handler.NewMCPHandler(mcpMarket, mcpServers, mcpBindings, voicebots)
 	internalH := handler.NewInternalHandler(voicebots, devices, models, voices, mcpBindings)
 	oauthH := handler.NewOAuthHandler(users, bindings, signToken)
 
-	availableH := handler.NewAvailableHandler(providers, models, voices)
+	availableH := handler.NewAvailableHandler(providers, models, voices, assetSvc)
 	tplH := handler.NewAgentTemplateHandler(agentTemplates)
 	memH := handler.NewMemoryHandler(memStore)
 	dataMemH := handler.NewDataMemoryHandler(memStore, devices, voicebots)
@@ -127,6 +127,7 @@ func newRouter(
 		mdl.PUT("/:id", modelH.Update)
 		mdl.DELETE("/:id", modelH.Delete)
 		api.GET("/voices/system", jwtMw, voiceH.ListSystem)
+		api.GET("/voices/mine", jwtMw, voiceH.ListMine)
 		mdl.GET("/:id/voices", voiceH.List)
 		mdl.POST("/:id/voices", voiceH.Create)
 		mdl.POST("/:id/voices/clone", voiceH.Clone)
